--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>YouTube Analyzer</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Tailwind CSS is now processed through PostCSS -->
 </head>
 <body>
   <div id="root"></div>
